fix #1241: registration page readability issue

--- a/stylesheets/options.scss
+++ b/stylesheets/options.scss
@@ -356,3 +356,7 @@ ul.country-list {
 
   }
 }
+
+.intl-tel-input .country-list .country .country-name {
+  color: #000;
+}
